# Normative_modelling_on_depression

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
configs/: bi_view.yaml
src/behaviour/: main.py  num_diagnosis.py
src/behaviour/R_scripts/: LCA.R
src/behaviour/files/: cbcl_8_dim_t.csv  lcmodel_prob_class.csv
src/behaviour/scripts/: plot.py  prepare_lca_data.py
src/discover/: bi_modal_deviate.py  ct_deviate.py  fmri_deviate.py  utils.py
src/interpret/: bi_modal_interpret.py  ct_visualize.py  fmri_visualize.py  locate_roi.py
src/interpret/files/: fc_features_weight.json  relevant_ct_features.txt  relevant_ct_features_with_labels.csv
src/load/: load.py
src/models/: VAE.py
src/preprocess/scripts/: neuroConbat.py
src/train/: f_VAE.py  s_VAE.py  utils.py
src/tune/: bi_mVAE.py  f_VAE.py  s_VAE.py  s_VAE_ana.py
